@@ -3,7 +3,8 @@ Changes in 3.3.0
 
 - New things:
   - CAPI: GEOSUnaryUnion
-  - CAPI: GEOSisValidDetail: tell state, reason & location apart
+  - CAPI: GEOSisValidDetail: tell state, reason & location apart. allows
+          passing flags.
   - CAPI: GEOSContext_setNoticeHandler_r, GEOSContext_setErrorHandler_r
   - CAPI: GEOSGeom_createEmptyPoint, GEOSGeom_createEmptyLineString
           GEOSGeom_createEmptyPolygon, GEOSGeom_createEmptyCollection
